k8s/shared/base-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: farmersbank
  labels:
    name: farmersbank
    environment: production
    compliance: pci-dss
